--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 Django==4.2.4
-line-bot-sdk==3.2.0
-pyngrok==6.0.0
+langchain==0.0.264
+line-bot-sdk==3.1.0
+openai==0.27.8
 python-decouple==3.8
+pyngrok==6.0.0
+
+
+
